--- a/style.css
+++ b/style.css
@@ -15,10 +15,22 @@ header {
 			position: fixed;
 }
 
-header h1 {
+/* ------------ headings ---------------*/
+
+h1 {
 			font-size: 2em;
 			color: white;
 			padding: 70px 20px 20px 50px;
+}
+
+h2 {
+			font-size: 1.5em;
+			font-weight: bold;
+}
+
+h3 {
+			font-size: 1em;
+			font-weight: bold;
 }
 
 
@@ -56,6 +68,10 @@ header h1 {
 			background-color: black;
 }
 
+.nav li a:focus {
+			background-color: red;
+}
+
 
 /* ------------ main ---------------*/
 
@@ -68,7 +84,17 @@ main {
 			padding-left: 50px;
 }
 
+/* ------------ main about ---------------*/
+
+img {
+			display: block;
+			width: 300px;
+			transform: rotate(90deg);
+			padding-top: 40px;
+}
+
 /* ------------ main favorites ---------------*/
+
 table, td, th {
 			border: 1px solid grey;
 			border-collapse: collapse;
@@ -108,6 +134,63 @@ main li a:hover {
 			text-decoration: underline;
 }
 
+/* ------------ main contact ---------------*/
+
+input[type=text], textarea, select, option, {
+			font-size: 0.9em;
+}
+
+input[type=text] {
+			box-sizing: border-box;
+			padding: 5px;
+			margin-top: 5px;
+			margin-bottom: 5px;
+			width: 530px;
+}
+
+input[type=text]:focus, textarea:focus, select:focus {
+    background-color: #eee;
+}
+
+label {
+		font-size: 0.8em;
+		font-weight: 500;
+}
+
+select {
+		width: 200px;
+		padding: 5px;
+		margin-top: 5px;
+		margin-bottom: 5px;
+}
+
+textarea {
+		width: 530px;
+		padding: 5px;
+		box-sizing: border-box;
+		margin-top: 5px;
+		margin-bottom: 5px;
+		resize: none;
+}
+
+input[type=submit], input[type=reset] {
+			font-size: 16px;
+			padding: 10px 20px;
+			margin-right: 10px;
+			border: 0;
+			border-radius: 5px;
+			color: white;
+			background-color: black;
+			text-align: center;
+			display: inline-block;
+			width: 200 px;
+			cursor: pointer;
+}
+
+input[type=submit]:hover, input[type=reset]:hover {
+			background-color: grey;
+			transition-duration: 0.2s;
+}
 
 
 /* ------------ footer ---------------*/
